// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginator.js renders data changes 1`] = `
<div>
  <nav>
    <hr />
    <ul
      style="list-style: none;"
    >
      <li
        style="display: inline-block; padding: 10px;"
      >
        <a
          href="#page_1"
        >
          <b>
            1
          </b>
        </a>
      </li>
      <li
        style="display: inline-block; padding: 10px;"
      >
        <a
          href="#page_2"
        >
          <span>
            2
          </span>
        </a>
      </li>
      <li
        style="display: inline-block; padding: 10px;"
      >
        <a
          href="#page_3"
        >
          <span>
            3
          </span>
        </a>
      </li>
      <li
        style="display: inline-block; padding: 10px;"
      >
        <a
          href="#page_4"
        >
          <span>
            4
          </span>
        </a>
      </li>
      <li
        style="display: inline-block; padding: 10px;"
      >
        <a
          href="#page_5"
        >
          <span>
            5
          </span>
        </a>
      </li>
      <li
        style="display: inline-block; padding: 10px;"
      >
        <a
          href="#page_6"
        >
          <span>
            6
          </span>
        </a>
      </li>
      <li
        style="display: inline-block; padding: 10px;"
      >
        <a
          href="#page_7"
        >
          <span>
            7
          </span>
        </a>
      </li>
      <li
        style="display: inline-block; padding: 10px;"
      >
        <a
          href="#page_8"
        >
          <span>
            8
          </span>
        </a>
      </li>
      <li
        style="display: inline-block; padding: 10px;"
      >
        <a
          href="#page_9"
        >
          <span>
            9
          </span>
        </a>
      </li>
      <li
        style="display: inline-block; padding: 10px;"
      >
        <a
          href="#page_10"
        >
          <span>
            10
          </span>
        </a>
      </li>
    </ul>
    <hr />
  </nav>
</div>
`;

exports[`Paginator.js renders data changes 2`] = `
<div>
  <nav>
    <hr />
    <ul
      style="list-style: none;"
    >
      <li
        style="display: inline-block; padding: 10px;"
      >
        <a
          href="#page_1"
        >
          <span>
            1
          </span>
        </a>
      </li>
      <li
        style="display: inline-block; padding: 10px;"
      >
        <a
          href="#page_2"
        >
          <b>
            2
          </b>
        </a>
      </li>
      <li
        style="display: inline-block; padding: 10px;"
      >
        <a
          href="#page_3"
        >
          <span>
            3
          </span>
        </a>
      </li>
      <li
        style="display: inline-block; padding: 10px;"
      >
        <a
          href="#page_4"
        >
          <span>
            4
          </span>
        </a>
      </li>
      <li
        style="display: inline-block; padding: 10px;"
      >
        <a
          href="#page_5"
        >
          <span>
            5
          </span>
        </a>
      </li>
    </ul>
    <hr />
  </nav>
</div>
`;
